--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -19,7 +19,7 @@
     <div class="container">
 
       <a href="index.html">
-        <img class="logo" src="/dmitriyishchenko-JSFE2023Q4/coffee-house/imgs/logo.png" alt="logo">
+        <img class="logo" src="./imgs/logo.png" alt="logo">
       </a>
 
       <nav class="nav">
@@ -41,7 +41,7 @@
             <a class="menu-link" href="menu.html">
               <span>Menu</span>
               <svg>
-                <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/imgs/sprite.svg#coffee-cup"></use>
+                <use href="./imgs/sprite.svg#coffee-cup"></use>
               </svg>
             </a>
           </li>
@@ -51,7 +51,7 @@
       <a class="menu-link nav__link" href="menu.html">
         <span>Menu</span>
         <svg>
-          <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/imgs/sprite.svg#coffee-cup"></use>
+          <use href="./imgs/sprite.svg#coffee-cup"></use>
         </svg>
       </a>
 
@@ -82,7 +82,7 @@
             <a href="menu.html" class="btn-primary">
               <span>Menu</span>
               <svg>
-                <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/imgs/sprite.svg#coffee-cup"></use>
+                <use href="./imgs/sprite.svg#coffee-cup"></use>
               </svg>
             </a>
           </div>
@@ -97,7 +97,7 @@
         <div class="carousel">
           <button class="btn-icon carousel__btn" data-direction="prev">
             <svg>
-              <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/imgs/sprite.svg#arrow-left"></use>
+              <use href="./imgs/sprite.svg#arrow-left"></use>
             </svg>
           </button>
 
@@ -105,7 +105,7 @@
             <div class="carousel__inner">
               <div class="carousel__slide">
                 <div class="item">
-                  <img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/imgs/coffee-slider-1.webp" alt="S'mores Frappuccino">
+                  <img src="./imgs/coffee-slider-1.webp" alt="S'mores Frappuccino">
                   <div class="item__info">
                     <h3 class="heading-3">S'mores Frappuccino</h3>
                     <p>This new drink takes an espresso and mixes it with brown sugar
@@ -118,7 +118,7 @@
 
               <div class="carousel__slide">
                 <div class="item">
-                  <img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/imgs/coffee-slider-2.webp" alt="Caramel Macchiato">
+                  <img src="./imgs/coffee-slider-2.webp" alt="Caramel Macchiato">
                   <div class="item__info">
                     <h3 class="heading-3">Caramel Macchiato</h3>
                     <p>Fragrant and unique classic espresso with rich caramel-peanut syrup, with cream under whipped
@@ -130,7 +130,7 @@
 
               <div class="carousel__slide">
                 <div class="item">
-                  <img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/imgs/coffee-slider-3.webp" alt="S'mores Frappuccino">
+                  <img src="./imgs/coffee-slider-3.webp" alt="S'mores Frappuccino">
                   <div class="item__info">
                     <h3 class="heading-3">Ice coffee</h3>
                     <p>A popular summer drink that tones and invigorates. Prepared from coffee, milk and ice.</p>
@@ -143,7 +143,7 @@
 
           <button class="btn-icon carousel__btn" data-direction="next">
             <svg>
-              <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/imgs/sprite.svg#arrow-right"></use>
+              <use href="./imgs/sprite.svg#arrow-right"></use>
             </svg>
           </button>
         </div>
@@ -165,13 +165,13 @@
           friends, or get some work done.</h2>
 
         <div class="gallery">
-          <figure class="gallery__item gallery__item--1"><img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/imgs/about-1.webp"
+          <figure class="gallery__item gallery__item--1"><img src="./imgs/about-1.webp"
               alt="a woman drinking coffee in a cafe"></figure>
-          <figure class="gallery__item gallery__item--2"><img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/imgs/about-2.webp"
+          <figure class="gallery__item gallery__item--2"><img src="./imgs/about-2.webp"
               alt="a man working on a laptop with coffee"></figure>
-          <figure class="gallery__item gallery__item--3"><img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/imgs/about-3.webp" alt="a cup of coffee">
+          <figure class="gallery__item gallery__item--3"><img src="./imgs/about-3.webp" alt="a cup of coffee">
           </figure>
-          <figure class="gallery__item gallery__item--4"><img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/imgs/about-4.webp" alt="a couple drinking coffee">
+          <figure class="gallery__item gallery__item--4"><img src="./imgs/about-4.webp" alt="a couple drinking coffee">
           </figure>
         </div>
       </div>
@@ -187,14 +187,14 @@
           <div class="mobile-app__links">
             <a class="btn-appstore" href="#!">
               <svg class="btn-appstore__icon">
-                <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/imgs/sprite.svg#apple"></use>
+                <use href="./imgs/sprite.svg#apple"></use>
               </svg>
               <span class="btn-appstore__caption text-caption">Available on the</span>
               <span class="btn-appstore__title">App store</span>
             </a>
             <a class="btn-appstore" href="#!">
               <svg class="btn-appstore__icon">
-                <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/imgs/sprite.svg#google"></use>
+                <use href="./imgs/sprite.svg#google"></use>
               </svg>
               <span class="btn-appstore__caption text-caption">Available on</span>
               <span class="btn-appstore__title">Google Play</span>
@@ -202,7 +202,7 @@
           </div>
         </div>
         <div class="mobile-app__img-box">
-          <img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/imgs/mobile-screens.webp" alt="mobile app" class="mobile-app__img">
+          <img src="./imgs/mobile-screens.webp" alt="mobile app" class="mobile-app__img">
         </div>
       </div>
     </section>
@@ -217,16 +217,16 @@
           <div class="footer__socials">
             <a class="btn-icon btn-icon--light" href="https://twitter.com/">
               <svg>
-                <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/imgs/sprite.svg#twitter"></use>
+                <use href="./imgs/sprite.svg#twitter"></use>
               </svg>
             </a>
             <a class="btn-icon btn-icon--light" href="https://www.instagram.com/">
               <svg>
-                <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/imgs/sprite.svg#instagram"></use>
+                <use href="./imgs/sprite.svg#instagram"></use>
               </svg>
             </a><a class="btn-icon btn-icon--light" href="https://www.facebook.com/">
               <svg>
-                <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/imgs/sprite.svg#facebook"></use>
+                <use href="./imgs/sprite.svg#facebook"></use>
               </svg>
             </a>
           </div>
@@ -240,7 +240,7 @@
               <a class="footer__contact-link text-link" href="https://maps.app.goo.gl/GZrkw8Y7VqrZE3dUA"
                 target="_blank">
                 <svg>
-                  <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/imgs/sprite.svg#pin-alt"></use>
+                  <use href="./imgs/sprite.svg#pin-alt"></use>
                 </svg>
                 <span>8558 Green Rd., LA</span>
               </a>
@@ -248,7 +248,7 @@
             <li>
               <a class="footer__contact-link text-link" href="tel:+16035550123" target="_blank">
                 <svg>
-                  <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/imgs/sprite.svg#phone"></use>
+                  <use href="./imgs/sprite.svg#phone"></use>
                 </svg>
                 <span>+1 (603) 555-0123</span>
               </a>
@@ -256,7 +256,7 @@
             <li>
               <p class="footer__contact-link text-link footer__contact-link--schedule">
                 <svg>
-                  <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/imgs/sprite.svg#clock"></use>
+                  <use href="./imgs/sprite.svg#clock"></use>
                 </svg>
                 <span>Mon-Sat: 9:00 AM – 23:00 PM</span>
               </p>
