--- a/coffee-house/menu.html
+++ b/coffee-house/menu.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
   <title>Coffee house | Menu</title>
-  <script type="module" crossorigin src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/menu-9QdTGg-4.js"></script>
+  <script type="module" crossorigin src="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/menu-J0WtuRau.js"></script>
   <link rel="modulepreload" crossorigin href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/controller-2v_w6-jc.js">
   <link rel="stylesheet" crossorigin href="/dmitriyishchenko-JSFE2023Q4/coffee-house/assets/controller-XBHmVASl.css">
 </head>
@@ -19,7 +19,7 @@
     <div class="container">
 
       <a href="index.html">
-        <img class="logo" src="/dmitriyishchenko-JSFE2023Q4/coffee-house/imgs/logo.png" alt="logo">
+        <img class="logo" src="./imgs/logo.png" alt="logo">
       </a>
 
       <nav class="nav">
@@ -41,7 +41,7 @@
             <a class="menu-link menu-link--active" href="#">
               <span>Menu</span>
               <svg>
-                <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/imgs/sprite.svg#coffee-cup"></use>
+                <use href="./imgs/sprite.svg#coffee-cup"></use>
               </svg>
             </a>
           </li>
@@ -51,7 +51,7 @@
       <a class="menu-link nav__link menu-link--active" href="#">
         <span>Menu</span>
         <svg>
-          <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/imgs/sprite.svg#coffee-cup"></use>
+          <use href="./imgs/sprite.svg#coffee-cup"></use>
         </svg>
       </a>
 
@@ -71,7 +71,7 @@
           <label for="tab-coffee" class="btn-tab">
             <input type="radio" id="tab-coffee" name="menu-tab" value="coffee" hidden checked />
             <span class="btn-tab__icon">
-              <img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/imgs/hot-beverage.svg" alt="coffee emoji">
+              <img src="./imgs/hot-beverage.svg" alt="coffee emoji">
             </span>
             <span>Coffee</span>
           </label>
@@ -79,7 +79,7 @@
           <label for="tab-tea" class="btn-tab">
             <input type="radio" id="tab-tea" name="menu-tab" value="tea" hidden />
             <span class="btn-tab__icon">
-              <img class="btn-tab__icon" src="/dmitriyishchenko-JSFE2023Q4/coffee-house/imgs/teapot.svg" alt="teapot emoji">
+              <img class="btn-tab__icon" src="./imgs/teapot.svg" alt="teapot emoji">
             </span>
             <span>Tea</span>
           </label>
@@ -87,7 +87,7 @@
           <label for="tab-dessert" class="btn-tab">
             <input type="radio" id="tab-dessert" name="menu-tab" value="dessert" hidden />
             <span class="btn-tab__icon">
-              <img src="/dmitriyishchenko-JSFE2023Q4/coffee-house/imgs/dessert.svg" alt="dessert emoji">
+              <img src="./imgs/dessert.svg" alt="dessert emoji">
             </span>
             <span>Dessert</span>
           </label>
@@ -97,7 +97,7 @@
         <div class="menu__items">
           <!-- <article class="card" data-name="Irish coffee" id="coffee-1">
             <div class=" card__img-box">
-              <img src="/imgs/coffee-1.webp" alt="Irish coffee">
+              <img src="./imgs/coffee-1.webp" alt="Irish coffee">
             </div>
             <div class="card__info">
               <h3 class="heading-3 card__title">Irish coffee</h3>
@@ -108,7 +108,7 @@
 
           <article class="card">
             <div class="card__img-box">
-              <img src="/imgs/coffee-2.webp" alt="Kahlua coffee">
+              <img src="./imgs/coffee-2.webp" alt="Kahlua coffee">
             </div>
             <div class="card__info">
               <h3 class="heading-3 card__title">Kahlua coffee</h3>
@@ -119,7 +119,7 @@
 
           <article class="card">
             <div class="card__img-box">
-              <img src="/imgs/coffee-3.webp" alt="Honey raf">
+              <img src="./imgs/coffee-3.webp" alt="Honey raf">
             </div>
             <div class="card__info">
               <h3 class="heading-3 card__title">Honey raf</h3>
@@ -130,7 +130,7 @@
 
           <article class="card">
             <div class="card__img-box">
-              <img src="/imgs/coffee-4.webp" alt="Ice cappuccino">
+              <img src="./imgs/coffee-4.webp" alt="Ice cappuccino">
             </div>
             <div class="card__info">
               <h3 class="heading-3 card__title">Ice cappuccino</h3>
@@ -141,7 +141,7 @@
 
           <article class="card">
             <div class="card__img-box">
-              <img src="/imgs/coffee-5.webp" alt="Espresso">
+              <img src="./imgs/coffee-5.webp" alt="Espresso">
             </div>
             <div class="card__info">
               <h3 class="heading-3 card__title">Espresso</h3>
@@ -152,7 +152,7 @@
 
           <article class="card">
             <div class="card__img-box">
-              <img src="/imgs/coffee-6.webp" alt="Latte">
+              <img src="./imgs/coffee-6.webp" alt="Latte">
             </div>
             <div class="card__info">
               <h3 class="heading-3 card__title">Latte</h3>
@@ -163,7 +163,7 @@
 
           <article class="card">
             <div class="card__img-box">
-              <img src="/imgs/coffee-7.webp" alt="Latte macchiato">
+              <img src="./imgs/coffee-7.webp" alt="Latte macchiato">
             </div>
             <div class="card__info">
               <h3 class="heading-3 card__title">Latte macchiato</h3>
@@ -174,7 +174,7 @@
 
           <article class="card">
             <div class="card__img-box">
-              <img src="/imgs/coffee-8.webp" alt="Coffee with cognac">
+              <img src="./imgs/coffee-8.webp" alt="Coffee with cognac">
             </div>
             <div class="card__info">
               <h3 class="heading-3 card__title">Coffee with cognac</h3>
@@ -211,16 +211,16 @@
           <div class="footer__socials">
             <a class="btn-icon btn-icon--light" href="https://twitter.com/">
               <svg>
-                <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/imgs/sprite.svg#twitter"></use>
+                <use href="./imgs/sprite.svg#twitter"></use>
               </svg>
             </a>
             <a class="btn-icon btn-icon--light" href="https://www.instagram.com/">
               <svg>
-                <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/imgs/sprite.svg#instagram"></use>
+                <use href="./imgs/sprite.svg#instagram"></use>
               </svg>
             </a><a class="btn-icon btn-icon--light" href="https://www.facebook.com/">
               <svg>
-                <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/imgs/sprite.svg#facebook"></use>
+                <use href="./imgs/sprite.svg#facebook"></use>
               </svg>
             </a>
           </div>
@@ -234,7 +234,7 @@
               <a class="footer__contact-link text-link" href="https://maps.app.goo.gl/GZrkw8Y7VqrZE3dUA"
                 target="_blank">
                 <svg>
-                  <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/imgs/sprite.svg#pin-alt"></use>
+                  <use href="./imgs/sprite.svg#pin-alt"></use>
                 </svg>
                 <span>8558 Green Rd., LA</span>
               </a>
@@ -242,7 +242,7 @@
             <li>
               <a class="footer__contact-link text-link" href="tel:+16035550123" target="_blank">
                 <svg>
-                  <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/imgs/sprite.svg#phone"></use>
+                  <use href="./imgs/sprite.svg#phone"></use>
                 </svg>
                 <span>+1 (603) 555-0123</span>
               </a>
@@ -250,7 +250,7 @@
             <li>
               <p class="footer__contact-link text-link footer__contact-link--schedule">
                 <svg>
-                  <use href="/dmitriyishchenko-JSFE2023Q4/coffee-house/imgs/sprite.svg#clock"></use>
+                  <use href="./imgs/sprite.svg#clock"></use>
                 </svg>
                 <span>Mon-Sat: 9:00 AM – 23:00 PM</span>
               </p>
